# pybindingcurve

./: .gitignore  LICENSE  README.md  example-DisplayHomoVsHetroDimerComparisonHeatmaps.py  example-GenerateHomoVsHetroDimerComparisonHeatmaps.py  example-HomoVsHetroDimerFormationBreaking.py  example_1to1_fit.py  example_1to1_simulation.py  example_competition_fit.py  example_competition_simulation.py  example_custom_binding_system.py  example_custom_binding_system2.py  example_homodimer_breaking_fit.py  example_homodimer_breaking_simulation.py  example_homodimer_formation_fit.py  example_homodimer_formation_simulation.py  example_paper_figure1.py  example_paper_figure2.py  interrogate_system_solutions.py  pyproject.toml  setup.py  test_pybindingcurve.py  testbed.py
docs/: api.md  fit_1to1.md  fit_competition.md  fit_homodimerbreaking.md  fit_homodimerformation.md  index.md  simulate_1to1.md  simulate_competition.md  simulate_custom_system.md  simulate_customsystem.md  simulate_homodimerbreaking.md  simulate_homodimerformation.md  tutorial.md
pybindingcurve/: __init__.py  pybindingcurve.py  setup.py  test_pybindingcurve.py
pybindingcurve/systems/: __init__.py  analytical_equations.py  analytical_systems.py  binding_system.py  kinetic_systems.py  kinetic_systems_1_to_1to5.py  lagrange_binding_system_factory.py  lagrange_systems.py  (+3 more)
tests/: conftest.py  test_competition.py  test_fitting.py  test_one_to_one.py
utils/: example-DisplayHomoVsHetroDimerComparisonHeatmaps.py  example-GenerateHomoVsHetroDimerComparisonHeatmaps.py  example-HomoVsHetroDimerFormationBreaking.py
(+10 files in other folders)
